--- a/PySpark/Pyspark_tutorial.ipynb
+++ b/PySpark/Pyspark_tutorial.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "2b2625a2-4130-4393-8d07-b8cab89f3b7c",
    "metadata": {},
    "outputs": [
@@ -119,12 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elements in RDD -> ['scala', 'java', 'hadoop', 'spark', 'akka', 'spark vs hadoop', 'pyspark', 'pyspark and spark']\n",
-      "Fitered RDD -> ['spark', 'spark vs hadoop', 'pyspark', 'pyspark and spark']\n",
-      "Key value pair -> [('scala', 1), ('java', 1), ('hadoop', 1), ('spark', 1), ('akka', 1), ('spark vs hadoop', 1), ('pyspark', 1), ('pyspark and spark', 1)]\n",
-      "Adding all the elements -> 15\n",
-      "Join RDD -> [('hadoop', (4, 5)), ('spark', (1, 2))]\n",
-      "Words got chached > True\n"
+      "Elements in RDD -> ['scala', 'java', 'hadoop', 'spark', 'akka', 'spark vs hadoop', 'pyspark', 'pyspark and spark']\n"
      ]
     }
    ],
@@ -147,7 +142,16 @@
     "coll = words.collect()\n",
     "print(\"Elements in RDD -> %s\" % (coll))\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "258f51aa-7081-4562-b3db-952b3c643efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# In[24]:\n",
     "\n",
     "\n",
@@ -169,6 +173,26 @@
     "fore = words.foreach(f)\n",
     "\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "70aae1ba-8171-4c62-bee2-a253ff1a5042",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitered RDD -> ['spark', 'spark vs hadoop', 'pyspark', 'pyspark and spark']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "# In[25]:\n",
     "\n",
     "\n",
@@ -189,7 +213,24 @@
     "words_filter = words.filter(lambda x: 'spark' in x)\n",
     "filtered = words_filter.collect()\n",
     "print(\"Fitered RDD -> %s\" % (filtered))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d6d61592-05aa-4da9-9701-eba1610b2de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key value pair -> [('scala', 1), ('java', 1), ('hadoop', 1), ('spark', 1), ('akka', 1), ('spark vs hadoop', 1), ('pyspark', 1), ('pyspark and spark', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# In[26]:\n",
     "\n",
@@ -211,7 +252,24 @@
     "words_map = words.map(lambda x: (x, 1))\n",
     "mapping = words_map.collect()\n",
     "print(\"Key value pair -> %s\" % (mapping))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ccf48573-b414-487c-a13b-7dd63473a5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding all the elements -> 15\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# In[27]:\n",
     "\n",
@@ -225,7 +283,24 @@
     "nums = sc.parallelize([1, 2, 3, 4, 5])\n",
     "adding = nums.reduce(add)\n",
     "print(\"Adding all the elements -> %i\" % (adding))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "20701566-8a23-4cb0-a3bb-fdd250de7ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Join RDD -> [('hadoop', (4, 5)), ('spark', (1, 2))]\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# In[28]:\n",
     "\n",
@@ -239,7 +314,24 @@
     "y = sc.parallelize([(\"spark\", 2), (\"hadoop\", 5)])\n",
     "joined = x.join(y)\n",
     "final = joined.collect()\n",
-    "print(\"Join RDD -> %s\" % (final))\n",
+    "print(\"Join RDD -> %s\" % (final))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "affac4de-8d81-464e-bc42-cc70ad672649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Words got chached > True\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "\n",
     "# In[29]:\n",
@@ -261,14 +353,13 @@
     ") \n",
     "words.cache() \n",
     "caching = words.persist().is_cached \n",
-    "print(\"Words got chached > %s\" % (caching))\n",
-    "\n"
+    "print(\"Words got chached > %s\" % (caching))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "258f51aa-7081-4562-b3db-952b3c643efc",
+   "id": "a2747c8e-1076-4287-b13f-add07e8e9af5",
    "metadata": {},
    "outputs": [],
    "source": []
