--- a/PySpark/Pyspark_tutorial.ipynb
+++ b/PySpark/Pyspark_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "c413be65",
    "metadata": {},
    "outputs": [],
@@ -16,10 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "9487e7ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=appName, master=local) created by __init__ at <ipython-input-2-d3f460fa7586>:2 ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-d3f460fa7586>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mconf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSparkConf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetAppName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"appName\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetMaster\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"local\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# yarn-client ,yarn-cluster\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\spark-3.2.3-bin-hadoop2.7\\spark-3.2.3-bin-hadoop2.7\\python\\pyspark\\context.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[0;32m    142\u001b[0m                 \" is not allowed as it is a security risk.\")\n\u001b[0;32m    143\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 144\u001b[1;33m         \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    145\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    146\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
+      "\u001b[1;32m~\\spark-3.2.3-bin-hadoop2.7\\spark-3.2.3-bin-hadoop2.7\\python\\pyspark\\context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[1;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[0;32m    348\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    349\u001b[0m                     \u001b[1;31m# Raise error if there is already a running Spark context\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 350\u001b[1;33m                     raise ValueError(\n\u001b[0m\u001b[0;32m    351\u001b[0m                         \u001b[1;34m\"Cannot run multiple SparkContexts at once; \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    352\u001b[0m                         \u001b[1;34m\"existing SparkContext(app=%s, master=%s)\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=appName, master=local) created by __init__ at <ipython-input-2-d3f460fa7586>:2 "
+     ]
+    }
+   ],
    "source": [
     "conf = SparkConf().setAppName(\"appName\").setMaster(\"local\") # yarn-client ,yarn-cluster\n",
     "sc = SparkContext(conf=conf)"
@@ -27,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9c556f6a-d6b0-411c-899d-0a78a98da70b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "0d320a47-754e-4d09-a461-3c67e4c71cc6",
    "metadata": {},
    "outputs": [
@@ -79,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "bf09d3f1-0618-4945-ab91-cf89ec3d3f76",
    "metadata": {},
    "outputs": [
@@ -111,46 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2b2625a2-4130-4393-8d07-b8cab89f3b7c",
+   "execution_count": 17,
+   "id": "258f51aa-7081-4562-b3db-952b3c643efc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elements in RDD -> ['scala', 'java', 'hadoop', 'spark', 'akka', 'spark vs hadoop', 'pyspark', 'pyspark and spark']\n"
+      "Elements in RDD -> None\n"
      ]
     }
    ],
-   "source": [
-    "\n",
-    "\n",
-    "\"\"\"collect()\n",
-    "All the elements in the RDD are returned.\"\"\"\n",
-    "from pyspark import SparkContext\n",
-    "words = sc.parallelize (\n",
-    "   [\"scala\", \n",
-    "   \"java\", \n",
-    "   \"hadoop\", \n",
-    "   \"spark\", \n",
-    "   \"akka\",\n",
-    "   \"spark vs hadoop\", \n",
-    "   \"pyspark\",\n",
-    "   \"pyspark and spark\"]\n",
-    ")\n",
-    "coll = words.collect()\n",
-    "print(\"Elements in RDD -> %s\" % (coll))\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "258f51aa-7081-4562-b3db-952b3c643efc",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# In[24]:\n",
     "\n",
@@ -171,7 +157,8 @@
     ")\n",
     "def f(x):print(x)\n",
     "fore = words.foreach(f)\n",
-    "\n",
+    "# coll = words.collect()\n",
+    "print(\"Elements in RDD -> %s\" % (fore))\n",
     "\n",
     "\n",
     "\n"
@@ -179,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "70aae1ba-8171-4c62-bee2-a253ff1a5042",
    "metadata": {},
    "outputs": [
@@ -218,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "d6d61592-05aa-4da9-9701-eba1610b2de6",
    "metadata": {},
    "outputs": [
@@ -257,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "ccf48573-b414-487c-a13b-7dd63473a5a1",
    "metadata": {},
    "outputs": [
@@ -288,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "20701566-8a23-4cb0-a3bb-fdd250de7ef0",
    "metadata": {},
    "outputs": [
@@ -319,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "affac4de-8d81-464e-bc42-cc70ad672649",
    "metadata": {},
    "outputs": [
@@ -360,6 +347,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a2747c8e-1076-4287-b13f-add07e8e9af5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76f658a5-4d01-446b-a1f6-1204ce97ed13",
    "metadata": {},
    "outputs": [],
    "source": []
