--- a/PySpark/Pyspark_SQL.ipynb
+++ b/PySpark/Pyspark_SQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "3f290cb6-a2fc-458b-b50c-ddaa3e648b3d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "939b66bd-062e-435d-985d-f9d55fabb530",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "f5dd83b4-77df-45eb-b5e8-982e64fa3409",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "86e9adc4-2119-4115-aa0c-f306dee0309b",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "850e1abd-1c64-4354-b973-647846663048",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "0b5e814a-4e27-4ce5-bbd2-553bfde2e5f5",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "f588728b-d329-4ceb-8fef-dc996ad8e1aa",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "b0a204e9-48f8-4a77-8876-9589ae5e262f",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "520c4ed9-7e01-4d24-837a-7dec904375e7",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "c8e5bf66-7b7d-471d-b37e-d08d03d0b70c",
    "metadata": {},
    "outputs": [
@@ -309,8 +309,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5d425b2b-44e6-466a-b433-ae2b2e07e1e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+-------+\n",
+      "|age|  id|   name|\n",
+      "+---+----+-------+\n",
+      "| 25|1201| satish|\n",
+      "| 28|1202|  haris|\n",
+      "| 39|1203|  amith|\n",
+      "| 23|1204|  javed|\n",
+      "| 23|1205| prudvi|\n",
+      "| 23|1206|Michael|\n",
+      "| 30|1207|   Andy|\n",
+      "+---+----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Global temporary view is cross-session\n",
+    "spark.newSession().sql(\"SELECT * FROM global_temp.people where age > 19 \").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec91e00-11e1-44fc-a76f-6afd2b42274d",
    "metadata": {},
    "outputs": [],
    "source": []
